--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>weather app</title>
-    <link rel="stylesheet" href="weather.css">
+    <link rel="stylesheet" href="index.css">
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.11.3/font/bootstrap-icons.min.css">
 </head>
 <body>
@@ -37,6 +37,6 @@
     </div>
 
     <!-- js script tag -->
-     <script src="weather.js"></script>
+     <script src="index.js"></script>
 </body>
 </html>
