--- a/index.html
+++ b/index.html
@@ -9,10 +9,12 @@
 </head>
 <body>
     <div class="card">
-        <div class="search">
+        <div class="search" id="search">
             <input type="text" placeholder="Search" spellcheck="false">
             <button><img src="search.png" alt=""></button>
         </div>
+        <div id="suggestions" class="suggestions"></div>
+
         <div class="weather">
             <img src="rain.png" class="weather-icon">
             <h1 class="temp">22°c</h1>
